--- a/lib/owlcarousel/assets/owl.carousel.css
+++ b/lib/owlcarousel/assets/owl.carousel.css
@@ -57,7 +57,7 @@
     cursor: pointer;
     cursor: hand;
     -webkit-user-select: none;
-    -khtml-user-select: none;
+    -k.php-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none; }
