--- a/admin/scss/_components/_common.scss
+++ b/admin/scss/_components/_common.scss
@@ -80,7 +80,7 @@ $clamp-numbers: (
 
   // Disable dragging
   -webkit-user-drag: none;
-  -k.php-user-drag: none;
+  -khtml-user-drag: none;
   -moz-user-drag: none;
   -o-user-drag: none;
   user-drag: none;
