--- a/scss/bootstrap/scss/_reboot.scss
+++ b/scss/bootstrap/scss/_reboot.scss
@@ -3,7 +3,7 @@
 
 // Reboot
 //
-// Normalization of html elements, manually forked from Normalize.css to remove
+// Normalization of HTML elements, manually forked from Normalize.css to remove
 // styles targeting irrelevant browsers while applying new styles.
 //
 // Normalize is licensed MIT. https://github.com/necolas/normalize.css
@@ -614,7 +614,7 @@ progress {
 
 // Hidden attribute
 //
-// Always hide an element with the `hidden` html attribute.
+// Always hide an element with the `hidden` HTML attribute.
 
 [hidden] {
   display: none !important;
